# busfactor

./: AGENTS.md  README.md  mazak.yaml  pyproject.toml
docs/design/: 0001-ethernet-ip-support.md  0002-tui-engine-consolidation.md
src/busfactor/: app.py  cli.py  config.py  demo.py  eip.py  engine.py  errors.py  field_vars.py  logging.py  protocols.py  replay.py  rules.py  variable.py  web.py
src/busfactor/webui/: app.js  index.html  styles.css
src/s7pymon/: __init__.py  app.py  cli.py  config.py  connection.py  demo.py  eip.py  engine.py  errors.py  protocols.py  replay.py  rules.py  variable.py  web.py
src/s7pymon/webui/: app.js  index.html  styles.css
tests/: fakes.py  test_eip.py  test_field_vars.py  test_rules.py  test_s7_monitor_app.py  test_s7_monitor_cli.py  test_s7_monitor_config.py  test_s7_monitor_connection.py  test_s7_monitor_demo.py  test_s7_monitor_engine.py  test_s7_monitor_logging.py  test_s7_monitor_replay.py  test_s7_monitor_runtime.py  test_s7_monitor_variable.py  test_s7_monitor_web.py
